--- a/lcd4linux.conf
+++ b/lcd4linux.conf
@@ -8,21 +8,21 @@ Display dpf {
 }
 Widget FIRST {
     class 'Text'
-    expression 'Kuechenradio'
+    expression 'Pifaenger'
     width 54
     align 'L'
-    update 5000
+    update 500
     Background 'ffffff'
     Foreground  '000000'
 }
 
-Widget BusyBar {
-    class 'Bar'
-    expression  proc_stat::cpu('busy',   500)
-    expression2 proc_stat::cpu('system', 500)
-    length 320	
-    direction 'E'
-    update 100
+Widget IMAGE {
+    class    'Image'
+    file     python::exec('slideshow', 'give_random_pic', '')
+    update   3000
+    reload   1
+    visible  1
+    inverted 0
 }
 
 Widget Disk {
@@ -52,8 +52,10 @@ Plugin raspi {
 Display 'DPF'
  
 Layout Dockstar{
-Row01.Col01  'FIRST'
-Row02.Col01 'BusyBar'
+    	Row01.Col01  'FIRST'
+        Layer 2 {
+   		X1.Y1 'IMAGE'
+    	}
 }
  
 Layout 'Dockstar'
