add script to configure installation in one step

--- a/lcd4linux.conf
+++ b/lcd4linux.conf
@@ -18,11 +18,21 @@ Widget FIRST {
 
 Widget IMAGE {
     class    'Image'
-    file     python::exec('slideshow', 'give_random_pic', '')
-    update   3000
+    file     python::exec('slideshow', 'give_random_pic', '0')
+    update   1000
     reload   1
     visible  1
     inverted 0
+}
+
+Widget MDPSTATUS {
+	class 'Text'
+	expression python::exec('slideshow', 'give_random_pic', '0')
+	width 100
+	align 'L'
+	update 500
+	Background 'ffffff'
+	Foreground '000000'
 }
 
 Widget Disk {
@@ -52,7 +62,8 @@ Plugin raspi {
 Display 'DPF'
  
 Layout Dockstar{
-    	Row01.Col01  'FIRST'
+    	Row01.Col01	'FIRST'
+	Row02.Col01	'MDPSTATUS'	
         Layer 2 {
    		X1.Y1 'IMAGE'
     	}
