added missing files from last commit :)

--- a/lcd4linux.conf
+++ b/lcd4linux.conf
@@ -18,7 +18,7 @@ Widget FIRST {
 
 Widget IMAGE {
     class    'Image'
-    file     python::exec('slideshow', 'give_random_pic', '0')
+    file     python::exec('slideshow', 'main', '0')
     update   1000
     reload   1
     visible  1
@@ -27,8 +27,8 @@ Widget IMAGE {
 
 Widget MDPSTATUS {
 	class 'Text'
-	expression python::exec('slideshow', 'give_random_pic', '0')
-	width 100
+	expression exec('mpc',1000)
+	width 320
 	align 'L'
 	update 500
 	Background 'ffffff'
@@ -62,11 +62,11 @@ Plugin raspi {
 Display 'DPF'
  
 Layout Dockstar{
-    	Row01.Col01	'FIRST'
-	Row02.Col01	'MDPSTATUS'	
-        Layer 2 {
+    Row01.Col01	'FIRST'
+    Row02.Col01	'MDPSTATUS'	
+    Layer 2 {
    		X1.Y1 'IMAGE'
-    	}
+    }
 }
  
 Layout 'Dockstar'
