Added a python module to drive the lcdmanager and display MPD status

--- a/lcd4linux.conf
+++ b/lcd4linux.conf
@@ -16,43 +16,34 @@ Widget FIRST {
     Foreground  '000000'
 }
 
-Widget IMAGE {
-    class    'Image'
-    file     python::exec('slideshow', 'main', '0')
-    update   1000
-    reload   1
-    visible  1
-    inverted 0
-}
-
-Widget MDPSTATUS {
+Widget MDPSTATUS1 {
 	class 'Text'
-	expression exec('mpc',1000)
+	expression python::exec('lcdmanager', 'main', '1')
 	width 320
 	align 'L'
-	update 500
+	update 100
 	Background 'ffffff'
 	Foreground '000000'
 }
 
-Widget Disk {
+Widget MDPSTATUS2 {
     class 'Text'
-    expression (proc_stat::disk('.*', 'rblk', 500) + proc_stat::disk('.*', 'wblk', 500))/2
-    prefix 'I/O'
-    width 10	
-    precision 0
-    align 'R'	
+    expression python::exec('lcdmanager', 'main', '2')
+    width 320
+    align 'L'
     update 100
-}	
+    Background 'ffffff'
+    Foreground '000000'
+}
 
-
-Widget TxtLine {
-    class  'Text'
-    expression  file::readline('/var/log/dmesg', 99)
-    prefix 'Log '
-    width  40
-    align  'L'
-    update tick
+Widget MDPSTATUS3 {
+    class 'Text'
+    expression python::exec('lcdmanager', 'main', '3')
+    width 320
+    align 'L'
+    update 100
+    Background 'ffffff'
+    Foreground '000000'
 }
 
 Plugin raspi {
@@ -61,12 +52,11 @@ Plugin raspi {
 
 Display 'DPF'
  
-Layout Dockstar{
-    Row01.Col01	'FIRST'
-    Row02.Col01	'MDPSTATUS'	
-    Layer 2 {
-   		X1.Y1 'IMAGE'
-    }
+Layout MyLayout{
+    Row01.Col01	'MDPSTATUS1'
+    Row02.Col01 'MDPSTATUS2'
+    Row03.Col01 'MDPSTATUS3'
+
 }
  
-Layout 'Dockstar'
+Layout 'MyLayout'
