added background picture to lcdmanager module and lcd4linux config

--- a/lcd4linux.conf
+++ b/lcd4linux.conf
@@ -8,7 +8,7 @@ Display dpf {
 }
 Widget FIRST {
     class 'Text'
-    expression 'Pifaenger'
+    expression 'A Line Of Text'
     width 54
     align 'L'
     update 500
@@ -46,6 +46,15 @@ Widget MDPSTATUS3 {
     Foreground '000000'
 }
 
+Widget IMAGE {
+    class    'Image'
+    file     python::exec('lcdmanager', 'main', 'pic')
+    update   1000
+    reload   1
+    visible  1
+    inverted 0
+}
+
 Plugin raspi {
     enabled 1
 }
@@ -53,10 +62,14 @@ Plugin raspi {
 Display 'DPF'
  
 Layout MyLayout{
-    Row01.Col01	'MDPSTATUS1'
-    Row02.Col01 'MDPSTATUS2'
-    Row03.Col01 'MDPSTATUS3'
-
+    Layer 1 {
+        Row01.Col01 'MDPSTATUS1'
+        Row02.Col01 'MDPSTATUS2'
+        Row03.Col01 'MDPSTATUS3'
+    }
+    Layer 2 {
+        X1.Y1 'IMAGE'
+    }
 }
  
 Layout 'MyLayout'
